@@ -51,11 +51,12 @@ import org.cesecore.audit.log.SecurityEventsLoggerSessionLocal;
 import org.cesecore.authentication.tokens.AuthenticationToken;
 import org.cesecore.config.CesecoreConfiguration;
 import org.cesecore.dbprotection.DatabaseProtectionException;
-import org.cesecore.keys.token.CryptoToken;
 import org.cesecore.util.ValidityDate;
 import org.cesecore.util.query.Criteria;
 import org.cesecore.util.query.QueryCriteria;
 import org.cesecore.util.query.QueryGenerator;
+
+import com.keyfactor.util.keys.token.CryptoToken;
 
 /**
  * This class handles secure logs auditing.
@@ -97,7 +98,7 @@ public class IntegrityProtectedAuditorSessionBean implements IntegrityProtectedA
         try {
             final File exportFile = AuditDevicesConfig.getExportFile(properties, timestamp);
             try (final SigningFileOutputStream signingFileOutputStream = new SigningFileOutputStream(exportFile, cryptoToken, signatureDetails)) {
-                final AuditExporter auditExporter = c.newInstance();
+                final AuditExporter auditExporter = c.getDeclaredConstructor().newInstance();
                 auditExporter.setOutputStream(signingFileOutputStream);
                 verifyAndOptionalExport(auditExporter, report, timestamp, AuditDevicesConfig.getAuditLogExportFetchSize(properties));
                 report.setExportedFile(exportFile.getCanonicalPath());
